# pai

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  Makefile.toml  README.md  build.rs  coverage_grcov.makefile.toml  rustfmt.toml  testing.md
.cargo/: config.toml
examples/: breakpoint-func.rs  breakpoint-noevent.rs  breakpoint.rs  hook-autogen.rs  hook-got.rs  logging.rs  minimal.rs  state.rs  strace.rs  trace-funcs.rs
scripts/: qemu-runner.rs  test-runner.rs
scripts/buildroot/: README.md  pai_aarch64_musl_defconfig  pai_armeabi_defconfig  pai_x86_64_musl_defconfig  pai_x86_defconfig
src/: buildinfo.rs  lib.rs  syscalls.rs  target.rs
src/api/: args.rs  callframe.rs  client.rs  messages.rs  mod.rs
src/arch/: aarch32.rs  aarch64.rs  mips32.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
src/ctrl/: mod.rs  thread.rs  tracer.rs
src/ctx/: main.rs  master.rs  mod.rs  secondary.rs
src/evtlog/: mod.rs
src/exe/: elf.rs  mod.rs
src/plugin/: mod.rs
src/plugin/plugins/: dlopen.rs  files.rs  mmap.rs  mod.rs  prctl.rs  reads.rs  simplify.rs
src/syscalls/: mod.rs  parsed.rs
src/trace/: mod.rs  ptrace.rs
src/utils/: mod.rs  process.rs
testdata/: .gitignore  Makefile  forkwait.c  getpid.c  sleep.c  sofile.c  threads.c  traceme.c  waitpid.c
